dependencies/charon/charon/tests/ui/simple/thread-local.out
error: charon does not support thread local references
 --> /rustc/library/std/src/sys/thread_local/native/mod.rs:97:25

error: charon does not support thread local references
 --> /rustc/library/std/src/sys/thread_local/native/mod.rs:105:25

ERROR Charon failed to translate this code (2 errors)
