dependencies/charon/charon/tests/ui/simple/thread-local.rs
//@ known-failure
thread_local!(static FOO: u32 = 0);

fn main() {}
